--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ h1 {
   color: black;
   font-size: 70px;
   text-align: center;
+  background: center/cover orange url(
 }
 h2 {
 color: rgb(1, 73, 1);
