--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ h1 {
   color: black;
   font-size: 70px;
   text-align: center;
-  background: center/cover orange url(
+  background: center/cover orange url(https://use.fontawesome.com/releases/v5.6.1/css/all.css)
 }
 h2 {
 color: rgb(1, 73, 1);
