--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-@media screen and (min-width: 767px) {/*ウィンドウ幅が767px以上の場合に適用*/
-  #menu-bg {
-    background-color: #00ffff; /*青色*/
-  }
 h1 {
   color: black;
   font-size: 70px;
@@ -11,6 +7,11 @@ h1 {
   const d = new Date();
   console.log(`${d.getMonth() + 1} 月 ${d.getDate()}`);
 }
+
+@media screen and (max-width: 479px) {/*ウィンドウ幅が479px以上の場合に適用*/
+  #menu-bg {
+    background-color: #00ffff; /*青色*/
+  }
 /* header {
   background: center/cover orange url(https://use.fontawesome.com/releases/v5.6.1/css/all.css)
 } */
